# metrohero-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml  rustdoc.yml
src/: cli.rs  client.rs  errors.rs  format.rs  lib.rs  main.rs  schemas.rs
tests/: integration_cli.rs  integration_lib.rs
tests/data/: global_station_reports.json  global_train_predictions.json  global_train_reports_api.json  station_strain_prediction_docs.json  station_tags_api.json  station_train_predictions_api.json  system_metrics_api.json  train_predictions_api.json  train_predictions_api2.json  train_predictions_docs.json  train_report_api.json  train_report_docs.json  tripinfo_api2.json  tripinfo_api_na_trains.json  tripinfo_docs.json  tweets_api.json  tweets_docs.json
