[package]
name = "metrohero_rs"
version = "0.1.0"
edition = "2021"
authors = ["Evan Pikulski <epikulski@icloud.com>"]
repository  = "https://github.com/epikulski/metrohero-rs"
documentation = "https://epikulski.github.io/metrohero-rs/metrohero_rs/"
keywords = ["wmata"]
publish = false

[features]
rustls = ["reqwest/rustls"]

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
reqwest = {version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
comfy-table = "6.1.2"
crossterm = "0.25.0"
lazy_static = "1.4.0"
serde_json = "1.0.87"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
assert_cmd = "2.0.6"
mockito = "0.31.0"
rstest = "0.16.0"
